--- a/Tokenomics.html
+++ b/Tokenomics.html
@@ -34,9 +34,11 @@
                 <li><a href="Tokenomics.html">$Pimp tokenomics paper</a></li>
             </ul>
         </nav>
-        <object data="tokenomicspdf.pdf" type="application/pdf" width="100%" height="800px">
-            <p><a href="path/to/your/pdf-file.pdf">download the PDF file</a>.</p>
-        </object>
+        <div class="pdf-container">
+            <object data="tokenomicspdf.pdf" type="application/pdf" width="100%" height="800px">
+                <p><a href="tokenomicspdf.pdf">download the PDF file</a>.</p>
+            </object>
+        </div>
     </main>
     <div class="main-wrapper"></div>
     <footer>
