--- a/Tokenomics.html
+++ b/Tokenomics.html
@@ -35,9 +35,10 @@
             </ul>
         </nav>
         <div class="pdf-container">
-            <object data="tokenomicspdf.pdf" type="application/pdf" width="100%" height="800px">
+            <object data="tokenomicspdf.pdf" type="application/pdf">
                 <p><a href="tokenomicspdf.pdf">download the PDF file</a>.</p>
             </object>
+            
         </div>
     </main>
     <div class="main-wrapper"></div>
